--- a/sallesense/wwwroot/css/site.css
+++ b/sallesense/wwwroot/css/site.css
@@ -1211,7 +1211,7 @@ h3 {
 .text-info { color: var(--info) !important; }
 .text-muted { color: var(--gray-600) !important; }
 
-.bg-primary { background-color: var(--primary) !important; }
+.bg-primary { background-color: var(--primary) !important;  color: white }
 .bg-success { background-color: var(--success) !important; }
 .bg-danger { background-color: var(--danger) !important; }
 .bg-warning { background-color: var(--warning) !important; }
